JumpScript/tests/baselines/reference/duplicateIdentifierDifferentSpelling.errors.txt
tests/cases/compiler/duplicateIdentifierDifferentSpelling.jump(3,3): error TS2300: Duplicate identifier '3'.
tests/cases/compiler/duplicateIdentifierDifferentSpelling.jump(6,21): error TS2300: Duplicate identifier '3'.


==== tests/cases/compiler/duplicateIdentifierDifferentSpelling.jump (2 errors) ====
    class A {
      0b11 = '';
      3 = '';
      ~
!!! error TS2300: Duplicate identifier '3'.
    }
    
    var X = { 0b11: '', 3: '' };
                        ~
!!! error TS2300: Duplicate identifier '3'.
    